--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
       <scope>test</scope>
     </dependency>
 
+
     <!-- Spring -->
     <dependency>
       <groupId>org.springframework</groupId>
@@ -180,18 +181,21 @@
     </dependency>
 
 
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
+    </dependency>
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
       <version>RELEASE</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter</artifactId>
-      <version>RELEASE</version>
-      <scope>test</scope>
-    </dependency>
+
 
     <!--		jackson for JSON  -->
     <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
