--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,12 @@
       <artifactId>jackson-annotations</artifactId>
       <version>${jackson.version}</version>
     </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.13.1</version>
+          <scope>test</scope>
+      </dependency>
 
     <!-- json-simple/json-simple -->
     <dependency>
