--- a/pom.xml
+++ b/pom.xml
@@ -185,6 +185,12 @@
       <artifactId>json-simple</artifactId>
       <version>1.1.1</version>
     </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.13.1</version>
+          <scope>test</scope>
+      </dependency>
 
     <!--  jstl  -->
     <dependency>
