--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,18 @@
       <artifactId>jackson-core</artifactId>
       <version>2.16.1</version>
     </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>RELEASE</version>
+          <scope>test</scope>
+      </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>RELEASE</version>
+      <scope>test</scope>
+    </dependency>
 
   </dependencies>
 
