feat::[익준]상품 등록 페이지
* homerunball product

* homerunball product

* update homerunball Product

* update productRegister.jsp

* update productRegister.jsp

* create productRegisterCopy.jsp

* delete productRegisterCopy.jsp

* Cart Mapper & Dao & TestCode

* remove Controller

* feat:: [익준] 제품 내용 출력

* homerunball product

* homerunball product

* update homerunball Product

* update productRegister.jsp

* feat::[민욱] 회원가입

* homerunball cust update

* after merge

* feat::[중섭] 주문 읽기

* order- mapper,dto,dao,service

* order 읽기

* 중간 commit

* homerunball product

* update homerunball project

* update homerunball project

---------

Co-authored-by: kimdani <rlaeksl0124@naver.com>
Co-authored-by: greensalttt <163237578+greensalttt@users.noreply.github.com>
Co-authored-by: n90425 <102747591+n90425@users.noreply.github.com>
Co-authored-by: vz4repo <50684258+vz4repo@users.noreply.github.com>

--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
@@ -16,6 +17,13 @@
   </properties>
 
   <dependencies>
+    <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis</artifactId>
+      <version>3.5.9</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis-spring -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
@@ -120,12 +128,15 @@
       <version>2.5</version>
       <scope>provided</scope>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/javax.servlet.jsp/javax.servlet.jsp-api -->
     <dependency>
       <groupId>javax.servlet.jsp</groupId>
       <artifactId>jsp-api</artifactId>
       <version>2.1</version>
       <scope>provided</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>jstl</artifactId>
@@ -147,7 +158,6 @@
           <version>2.3.3</version>
           <scope>provided</scope>
       </dependency>
-
     <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
     <dependency>
       <groupId>javax.validation</groupId>
@@ -216,13 +226,6 @@
           <version>4.13.1</version>
           <scope>test</scope>
       </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>RELEASE</version>
-      <scope>test</scope>
-    </dependency>
-
   </dependencies>
 
   <build>
