--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@
 # AWS User-specific
 .idea/**/aws.xml
 
+# In general, series of keys
+*.properties
+
 # Generated files
 .idea/**/contentModel.xml
 
