--- a/pom.xml
+++ b/pom.xml
@@ -308,6 +308,11 @@
 
   <build>
     <finalName>homerunball-web</finalName>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <artifactId>maven-eclipse-plugin</artifactId>
