--- a/pom.xml
+++ b/pom.xml
@@ -173,12 +173,6 @@
       <artifactId>jackson-annotations</artifactId>
       <version>${jackson.version}</version>
     </dependency>
-      <dependency>
-          <groupId>junit</groupId>
-          <artifactId>junit</artifactId>
-          <version>4.13.1</version>
-          <scope>test</scope>
-      </dependency>
 
     <!-- json-simple/json-simple -->
     <dependency>
@@ -186,12 +180,7 @@
       <artifactId>json-simple</artifactId>
       <version>1.1.1</version>
     </dependency>
-      <dependency>
-          <groupId>junit</groupId>
-          <artifactId>junit</artifactId>
-          <version>4.13.1</version>
-          <scope>test</scope>
-      </dependency>
+
 
     <!--  jstl  -->
     <dependency>
@@ -220,6 +209,12 @@
       <groupId>org.apache.tiles</groupId>
       <artifactId>tiles-extras</artifactId>
       <version>3.0.8</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13.1</version>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
 
