--- a/src/main/resources/confidential.properties
+++ b/src/main/resources/confidential.properties
@@ -7,7 +7,7 @@ datasource.password = 12341234
 
 ############################-- Amazon RDS (mysql) Data Sources (PROD) --############################
 #datasource.driver = com.mysql.cj.jdbc.Driver
-#datasource.url = jdbc:mysql://db-mysql-homerun.c1a8yisc0fvu.ap-northeast-2.rds.amazonaws.com:3306/homerunball?useUnicode=true&amp;characterEncoding=utf8
+#datasource.url = jdbc:mysql://db-mysql-homerun.c1a8yisc0fvu.ap-northeast-2.rds.amazonaws.com:3306/homerunball?useUnicode=true&ampcharacterEncoding=utf8
 #datasource.username = admin
 #datasource.password = W66i^Rbnj#V';FJ
 ####################################################################################################
