--- a/pom.xml
+++ b/pom.xml
@@ -172,7 +172,11 @@
       <artifactId>jackson-annotations</artifactId>
       <version>${jackson.version}</version>
     </dependency>
-
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+      <version>${jackson.version}</version> <!-- 최신 버전으로 변경 -->
+    </dependency>
     <!-- json-simple/json-simple -->
     <dependency>
       <groupId>com.googlecode.json-simple</groupId>
