--- a/pom.xml
+++ b/pom.xml
@@ -172,7 +172,12 @@
       <artifactId>jackson-annotations</artifactId>
       <version>${jackson.version}</version>
     </dependency>
-
+    <!-- 2024.05.15 [혁락] 의존성 문제로 추가 -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
     <!-- json-simple/json-simple -->
     <dependency>
       <groupId>com.googlecode.json-simple</groupId>
